sjengida/g3/setup_epd_line
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/setup_epd_line/src/epd.c:654:14: error: use of undeclared identifier 'rankoffsets_0'
rankoffset = rankoffsets_0[rankp]; 
             ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/setup_epd_line/src/obj/epd.o] Error 1
